<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.spacetravelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.example.spacetravelapp.ui.archive.PlanetArchive"
        android:label="@string/menu_archive"
        tools:layout="@layout/fragment_planetarchive" />
    <fragment
        android:id="@+id/nav_journeyPlanner"
        android:name="com.example.spacetravelapp.ui.journeyplanner.JourneyPlanner"
        android:label="@string/journeyPlanner"
        tools:layout="@layout/fragment_journey_planner" />
    <fragment
        android:id="@+id/nav_savedJourneys"
        android:name="com.example.spacetravelapp.ui.savedjourneys.SavedJourneys"
        android:label="@string/savedJourneys"
        tools:layout="@layout/fragment_saved_journeys" />

</navigation>